--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">Sherlock</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="app_name">Sherlock Test</string>
 </resources>
