--- a/sherlock/src/main/res/values/strings.xml
+++ b/sherlock/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="sherlock_session_name">Session name</string>
     <string name="sherlock_rename">RENAME</string>
     <string name="sherlock_delete_all_requests_in_session">Delete all requests in this session</string>
+    <string name="sherlock_show_floating_anchor">Show floating anchor</string>
 </resources>
